--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -225,9 +225,6 @@
                 #{power.ck "elcuk.index"}
                   <li><a href="@{Elcuk.index()}">全局参数</a></li>
                 #{/power.ck}
-                #{power.ck "fbacenters.index"}
-                  <li><a href="@{FBACenters.index()}">FBACenter</a></li>
-                #{/power.ck}
                 #{power.ck "jobs.index"}
                   <li><a href="@{Jobs.index()}">任务管理</a></li>
                 #{/power.ck}
@@ -250,7 +247,10 @@
                   <li><a href="@{MailsRecords.index()}">邮件管理</a></li>
                 #{/power.ck}
                 #{power.ck "teams.show"}
-                  <li><a href="@{Teams.show()}">TEAM管理</a></li>
+                  <li><a href="@{Teams.show()}">TEAM 管理</a></li>
+                #{/power.ck}
+                #{power.ck "fbacenters.index"}
+                  <li><a href="@{FBACenters.index()}">FBACenter 管理</a></li>
                 #{/power.ck}
                 #{power.ck "categoryinfos.categoryassign"}
                   <li><a href="@{CategoryInfos.categoryassign()}">部门品线负责人管理</a></li>
