--- a/core/app/views/FBAs/fba.html
+++ b/core/app/views/FBAs/fba.html
@@ -24,8 +24,9 @@
       <b> SHIP TO:</b><br>
       <b>${fba?.fbaCenter?.name}</b><br>
       <b>${fba?.fbaCenter?.addressLine1}</b><br>
-      <b>${fba?.fbaCenter?.postalCode}</b>
-      <b>${fba?.fbaCenter?.city}</b><br>
+      <b>${fba?.fbaCenter?.city}${fba.fbaCenter?.city? ',' : ''}</b>
+      <b>${fba?.fbaCenter?.stateOrProvinceCode}</b>
+      <b>${fba?.fbaCenter?.postalCode}</b><br>
       <b>${fba?.codeToCounrty()}</b><br>
     </td>
   </tr>
