--- a/core/app/views/FBACenters/index.html
+++ b/core/app/views/FBACenters/index.html
@@ -10,23 +10,37 @@
   <table class="table table-condensed table-bordered" name="fbacenterList">
     <thead>
     <tr>
-      <th>#</th>
-      <th>CenterId</th>
-      <th>AddressLine1</th>
-      <th>AddressLine2</th>
-      <th>City</th>
-      <th>Name</th>
-      <th>CountryCode</th>
-      <th>StateOrProvinceCode</th>
-      <th>PostalCode</th>
+      <th rel="popover" content="<img src='/img/helper/fbaCenterId.jpg'>"
+          full-width="true" placement="bottom">CenterId
+      </th>
+      <th rel="popover" content="<img src='/img/helper/fbaAddressLine1.jpg'>"
+          full-width="true" placement="bottom">AddressLine1
+      </th>
+      <th rel="popover" content="<img src='/img/helper/fbaAddressLine2.jpg'>"
+          full-width="true" placement="bottom">AddressLine2
+      </th>
+      <th rel="popover" content="<img src='/img/helper/fbaCity.jpg'>"
+          full-width="true" placement="bottom">City
+      </th>
+      <th rel="popover" content="<img src='/img/helper/fbaName.jpg'>"
+          full-width="true" placement="bottom">Name
+      </th>
+      <th rel="popover" content="<img src='/img/helper/fbaCountryCode.jpg'>"
+          full-width="true" placement="bottom">CountryCode
+      </th>
+      <th rel="popover" content="<img src='/img/helper/fbaStateOrProvinceCode.jpg'>"
+          full-width="true" placement="bottom">StateOrProvinceCode
+      </th>
+      <th rel="popover" content="<img src='/img/helper/fbaPostalCode.jpg'>"
+          full-width="true" placement="bottom">PostalCode
+      </th>
       <th width="6%">Action</th>
     </tr>
     </thead>
     <tbody>
     #{list items:centers, as:'center'}
     <tr>
-      <td>${center.id}</td>
-      <td>${center.centerId}</td>
+      <td><a href="@{FBACenters.show(center.id)}">${center.centerId}</a></td>
       <td>${center.addressLine1}</td>
       <td>${center.addressLine2}</td>
       <td>${center.city}</td>
