*  FBA label 增加输出 fbaAddressLine2

--- a/core/app/views/FBACenters/show.html
+++ b/core/app/views/FBACenters/show.html
@@ -24,7 +24,8 @@
           <th rel="popover" content="<img src='/img/helper/fbaAddressLine2.jpg'>"
               full-width="true" placement="bottom">AddressLine2
           </th>
-          <td><input type="text" name="center.addressLine2" value="${center.addressLine2}"></td>
+          <td><input type="text" class="input-xlarge" name="center.addressLine2" placeholder="请确认 FBACenter 是否拥有这个属性."
+                     value="${center.addressLine2}"></td>
         </tr>
         <tr>
           <th rel="popover" content="<img src='/img/helper/fbaCity.jpg'>"
@@ -43,7 +44,7 @@
               full-width="true" placement="bottom">CountryCode
           </th>
           <td>
-            <input type="text" name="center.countryCode" value="${center.countryCode}">
+            <input type="text" class="input-mini" name="center.countryCode" value="${center.countryCode}">
           </td>
         </tr>
         <tr>
@@ -57,8 +58,8 @@
           <th rel="popover" content="<img src='/img/helper/fbaPostalCode.jpg'>"
               full-width="true" placement="bottom">PostalCode
           </th>
-          <td>
-            <input type="text" name="center.postalCode" value="${center.postalCode}">
+          <td colspan="3">
+            <input type="text" class="input-small" name="center.postalCode" value="${center.postalCode}">
           </td>
         </tr>
         <tr>
