--- a/core/app/views/FBAs/fba.html
+++ b/core/app/views/FBAs/fba.html
@@ -24,6 +24,9 @@
       <b> SHIP TO:</b><br>
       <b>${fba?.fbaCenter?.name}</b><br>
       <b>${fba?.fbaCenter?.addressLine1}</b><br>
+    #{if fba?.fbaCenter?.addressLine2}
+      <b>${fba?.fbaCenter?.addressLine2}</b><br>
+    #{/if}
       <b>${fba?.fbaCenter?.city}${fba.fbaCenter?.city? ',' : ''}</b>
       <b>${fba?.fbaCenter?.stateOrProvinceCode}</b>
       <b>${fba?.fbaCenter?.postalCode}</b><br>
