--- a/core/app/views/FBACenters/index.html
+++ b/core/app/views/FBACenters/index.html
@@ -9,6 +9,9 @@
 <div class="row-fluid">
   <table class="table table-condensed table-bordered" name="fbacenterList">
     <thead>
+    <!-- WARNING: 请勿随意更改 th 的位置.
+    受影响代码: fbacenters/index.js 内对 a[name=checkFBALabel] 对象绑定的 click 事件.
+    -->
     <tr>
       <th rel="popover" content="<img src='/img/helper/fbaCenterId.jpg'>"
           full-width="true" placement="bottom">CenterId
@@ -34,7 +37,8 @@
       <th rel="popover" content="<img src='/img/helper/fbaPostalCode.jpg'>"
           full-width="true" placement="bottom">PostalCode
       </th>
-      <th width="6%">Action</th>
+      <th width="6%">Auto Sync Switch</th>
+      <th width="5%">Action</th>
     </tr>
     </thead>
     <tbody>
@@ -59,8 +63,22 @@
                name="enableAutoSync">Enable</a>
           #{/else}
       </td>
+      <td>
+        <a rel="tooltip" placement="top" title="检查 FBA Label 是否正确" name="checkFBALabel">
+          <i class="icon-download-alt"></i> Check
+        </a>
+      </td>
     </tr>
     #{/list}
     </tbody>
   </table>
+</div>
+
+
+<!-- Ship To Model -->
+<div id="fba_ship_to_modal" class="modal hide fade">
+  <div class="modal-body" id="fba_ship_to_body"></div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+  </div>
 </div>
