--- a/core/app/views/FBACenters/index.html
+++ b/core/app/views/FBACenters/index.html
@@ -79,6 +79,6 @@
 <div id="fba_ship_to_modal" class="modal hide fade">
   <div class="modal-body" id="fba_ship_to_body"></div>
   <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+    <button class="btn" data-dismiss="modal" aria-hidden="true">OK</button>
   </div>
 </div>
