--- a/core/app/views/ProcureUnits/indexWhouse.html
+++ b/core/app/views/ProcureUnits/indexWhouse.html
@@ -88,11 +88,11 @@
       <div class="span12">
         <div class="inline">
           <a href="javascript:void(0)" data-url="@{Inbounds.blank()}" class="btn btn btn-info inline"
-             id="createInbound1">加工收货入库单</a>
+             id="createInbound">加工收货入库单</a>
           <a href="javascript:void(0)" data-url="@{Inbounds.blank()}" class="btn btn-primary inline"
-             id="createInbound">采购收货入库单</a>
-          <a href="javascript:void(0)" data-url="@{Inbounds.blank()}" class="btn btn-success inline"
-             id="createInbound">创建出库单</a>
+             id="createInboundBtn">采购收货入库单</a>
+          <a href="javascript:void(0)" data-url="@{Outbounds.blank()}" class="btn btn-success inline"
+             id="createOutboundBtn">创建出库单</a>
           <a href="javascript:void(0)" data-url="@{Inbounds.blank()}" class="btn btn-warning inline"
              id="createInbound">创建退货单</a>
           <input type="hidden" name="p.unitIds" id="unitIds"/>
