--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -203,9 +203,12 @@
                 #{/power.ck}
               <li class="divider"></li>
                 #{power.ck "procures.indexwhouse"}
-                  <li><a href="@{ProcureUnits.indexWhouse()}">采购计划列表(仓库)</a></li>
+                  <li><a href="@{ProcureUnits.indexWhouse()}">采购计划(仓库)</a></li>
                 #{/power.ck}
               <li><a href="@{Inbounds.index()}">收货入库单</a></li>
+              <li><a href="@{Outbounds.index()}">出库单</a></li>
+              <li><a href="@{Refunds.index()}">退货单</a></li>
+
                 #{power.ck "whouseitems.index"}
                   <li><a href="@{WhouseItems.index()}">库存</a></li>
                 #{/power.ck}
