--- a/core/app/views/main.html
+++ b/core/app/views/main.html
@@ -5,6 +5,8 @@
   <title>#{get 'title' /}</title>
   <meta charset="${_response_encoding}">
   <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="/public/stylesheets/bootstrap-responsive.css" rel="stylesheet">
   <script type="text/javascript">
       #{if play.Play.mode.isDev()}
       window.PLAY_MODE = "DEV";
