--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -1,9 +1,15 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container-fluid">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+
       <a class="brand" href="@{Application.index()}">${models.OperatorConfig.getVal("brandname")}</a>
 
-      <div class="nav-collapse">
+      <div class="nav-collapse collapse">
         <ul class="nav">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">首页<b class="caret"></b></a>
@@ -202,6 +208,7 @@
                   <li><a href="@{Whouses.index()}">仓库</a></li>
                 #{/power.ck}
               <li class="divider"></li>
+              <li><a href="@{Products.whouseAttrs()}">产品</a></li>
                 #{power.ck "whouseitems.index"}
                   <li><a href="@{WhouseItems.index()}">库存</a></li>
                 #{/power.ck}
