--- a/core/app/views/Products/whouseAttrs.html
+++ b/core/app/views/Products/whouseAttrs.html
@@ -1,3 +1,25 @@
+#{extends 'main_full.html' /}
+#{set title:'Product' /}
+#{set 'moreScripts'}
+    #{script 'localResize.coffee'/}
+    #{script 'localResize.ui.coffee'/}
+    #{script 'jquery.filedrop.js' /}
+    #{script 'component/dropUpload.coffee'/}
+    #{script 'products/whouseAttrs.js'/}
+#{/set}
+
+<div class="row-fluid">
+  <form action="#" method="post" class="search_form">
+    <div class="span12">
+      <div class="input-prepend input-append inline">
+        <span class="add-on"><i class="icon-search"></i></span>
+        <input type="text" autocomplete="off" name="p.search" value="${p.search}" style="width:172px;" placeHolder="SKU、条码">
+        <a href="javascript:void(0)" data-href="@{Products.whouseAttrs()}" class="btn btn-primary" id="searchBtn"
+           data-loading>搜索</a>
+      </div>
+    </div>
+  </form>
+</div>
 <div class="row-fluid">
   <form action="@{Products.update()}" method="post">
     <table class="table table-bordered">
