*  增加 LocalResize 移动端兼容文件

--- a/core/app/views/CheckTasks/_show.html
+++ b/core/app/views/CheckTasks/_show.html
@@ -1,7 +1,8 @@
 #{script 'jquery.filedrop.js' /}
 #{script 'component/dropUpload.coffee'/}
 #{script 'checktasks/show.coffee'/}
-#{script 'localResize.coffee'/} <!-- LocalResize Github 地址: https://github.com/think2011/localResizeIMG-2 -->
+#{script 'mobileBUGFix.mini.js'/}
+#{script 'localResize.coffee'/}
 #{script 'localResize.ui.coffee'/}
 
 <div class="row-fluid">
