--- a/core/app/views/Products/whouseAttrs.html
+++ b/core/app/views/Products/whouseAttrs.html
@@ -1,6 +1,7 @@
 #{extends 'main_full.html' /}
 #{set title:'Product' /}
 #{set 'moreScripts'}
+    #{script 'mobileBUGFix.mini.js'/}
     #{script 'localResize.coffee'/}
     #{script 'localResize.ui.coffee'/}
     #{script 'jquery.filedrop.js' /}
