*  增加手动检查 FBA Label 中 Ship To 的功能

--- a/core/app/views/FBACenters/index.html
+++ b/core/app/views/FBACenters/index.html
@@ -75,7 +75,7 @@
 </div>
 
 
-<!-- Ship To Model -->
+<!-- Ship To Modal -->
 <div id="fba_ship_to_modal" class="modal hide fade">
   <div class="modal-body" id="fba_ship_to_body"></div>
   <div class="modal-footer">
