--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -100,6 +100,19 @@
                     #{/else}
                 #{/if}
             #{/cache}
+            #{set fbaCenter: unit.fba.fbaCenter/}
+            #{if fbaCenter}
+              <a href="javascript:void(0)" rel="tooltip" placement="top" title="检查 FBA Label 中的 Ship To 是否正确"
+                 name="checkFBALabel"
+                 data-addressline1="${fbaCenter.addressLine1}"
+                 data-addressline2="${fbaCenter.addressLine2}"
+                 data-city="${fbaCenter.city}"
+                 data-name="${fbaCenter.name}"
+                 data-countrycode="${fbaCenter.countryCode}"
+                 data-stateorprovincecode="${fbaCenter.stateOrProvinceCode}"
+                 data-postalcode="${fbaCenter.postalCode}"><i class="icon-eye-open"></i>
+              </a>
+            #{/if}
         #{/if}
     </td>
     <td>
@@ -286,3 +299,11 @@
   </tr>
 #{/if}
 </table>
+
+<!-- Ship To Modal -->
+<div id="fba_ship_to_modal" class="modal hide fade">
+  <div class="modal-body" id="fba_ship_to_body"></div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">OK</button>
+  </div>
+</div>
