*  去除 textarea 的换行

--- a/core/app/views/Cooperators/newCooperItem.html
+++ b/core/app/views/Cooperators/newCooperItem.html
@@ -133,9 +133,7 @@
       <tr>
         <td>产品要求</td>
         <td colspan="3">
-          <textarea rows="8" name="copItem.productTerms" class="input input-block-level">
-          ${copItem.productTerms}
-          </textarea>
+          <textarea rows="8" name="copItem.productTerms" class="input input-block-level">${copItem.productTerms}</textarea>
         </td>
       </tr>
 
