--- a/core/app/views/Products/show.html
+++ b/core/app/views/Products/show.html
@@ -6,6 +6,8 @@
     #{script 'component/dropUpload.coffee'/}
     #{script 'products/show.coffee'/}
     #{script 'products/skulinechart.coffee'/}
+    #{script 'localResize.coffee'/}
+    #{script 'localResize.ui.coffee'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert /}
@@ -30,6 +32,11 @@
   <li>
     <a href="#procureinfo" data-toggle='tab' id="skuProcureInfo">采购信息</a>
   </li>
+    #{power.ck "whouses.index"}
+      <li>
+        <a href="#whouseAttrs" data-toggle="tab" id="showWhouseAttr">仓库信息</a>
+      </li>
+    #{/power.ck}
 </ul>
 
 <div id="selling_tabs" class="tab-content">
@@ -96,5 +103,10 @@
       <div class="span6" style="height:450px;width:1200px" id='skuprocureqty'></div>
     </div>
   </div>
+    #{power.ck "whouses.index"}
+      <div class="tab-pane fade" id='whouseAttrs'>
+          #{include 'Products/_whouseAttrs.html'/}
+      </div>
+    #{/power.ck}
 </div>
 #{/else}
