*  增加引入 mobileBUGFix.mini.js *  调整权限校验

--- a/core/app/views/Products/show.html
+++ b/core/app/views/Products/show.html
@@ -8,6 +8,7 @@
     #{script 'products/skulinechart.coffee'/}
     #{script 'localResize.coffee'/}
     #{script 'localResize.ui.coffee'/}
+    #{script 'mobileBUGFix.mini.js'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert /}
@@ -32,7 +33,7 @@
   <li>
     <a href="#procureinfo" data-toggle='tab' id="skuProcureInfo">采购信息</a>
   </li>
-    #{power.ck "whouses.index"}
+    #{power.ck "products.whouseattrs"}
       <li>
         <a href="#whouseAttrs" data-toggle="tab" id="showWhouseAttr">仓库信息</a>
       </li>
@@ -103,9 +104,9 @@
       <div class="span6" style="height:450px;width:1200px" id='skuprocureqty'></div>
     </div>
   </div>
-    #{power.ck "whouses.index"}
+    #{power.ck "products.whouseattrs"}
       <div class="tab-pane fade" id='whouseAttrs'>
-          #{include 'Products/_whouseAttrs.html'/}
+          #{include 'Products/_whouseAttrsForm.html'/}
       </div>
     #{/power.ck}
 </div>
