--- a/core/app/views/Products/_whouseAttrsForm.html
+++ b/core/app/views/Products/_whouseAttrsForm.html
@@ -84,10 +84,12 @@
     </div>
   </div>
 #{power.ck "products.update"}
-  <div class="row-fluid">
+<div class="row-fluid">
+  <div class="span2">
     <div id="file_home" data-fid="${pro.sku}" class="row-fluid"></div>
     <input type="button" class="btn btn-default btn-block" value="上传" id="whouse_attrs_attach_btn"
            data-loading="正在上传">
   </div>
+</div>
 #{/power.ck}
 </div>
